test_suite/tests/ui/identifier/variant_tuple.stderr
error: #[serde(variant_identifier)] may only contain unit variants
 --> tests/ui/identifier/variant_tuple.rs:7:5
  |
7 |     B(u8, u8),
  |     ^^^^^^^^^
